2009-02-05  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Depend on overlay.stamp rather than patch.stamp.
	
2009-02-05  Andrew John Hughes  <ahughes@redhat.com>

	Ensure the NIO2 code is in sync with the latest
	build drop, b98.
	* overlays/nio2/openjdk/jdk/src/share/classes/org/classpath/icedtea/java/nio/file/attribute/NamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/sun/nio/fs/AbstractNamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/sun/nio/fs/Cancellable.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsAclFileAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsChannelFactory.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsDirectoryStream.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsFileAttributeViews.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsFileCopy.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsFileStore.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsFileSystemProvider.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsLinkSupport.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsNamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsPath.java,
	* overlays/nio2/openjdk/jdk/test/org/classpath/icedtea/java/nio/file/Path/InterruptCopy.java,
	* overlays/nio2/openjdk/jdk/test/org/classpath/icedtea/java/nio/file/attribute/NamedAttributeView/Basic.java,

2009-02-04  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(AC_CHECK_FOR_GCJ_JDK): Drop out of loop
	when first solution is found.
	(AC_CHECK_FOR_OPENJDK): Likewise.
	(AC_CHECK_FOR_ICEDTEA): Likewise.
	
2009-02-04  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Add new patch.
	* patches/hotspot/14.0b08/icedtea-format.patch,