@@ -6,9 +6,8 @@ diff -Nru openjdk.orig/jdk/make/common/shared/Defs.gmk openjdk/jdk/make/common/s
  # Default names
  ifdef OPENJDK
 -  LAUNCHER_NAME = openjdk
--  PRODUCT_NAME = OpenJDK
 +  LAUNCHER_NAME = java
-+  PRODUCT_NAME = IcedTea6
+   PRODUCT_NAME = OpenJDK
    PRODUCT_SUFFIX = Runtime Environment
    JDK_RC_PLATFORM_NAME = Platform
    COMPANY_NAME = N/A
